--- a/index.html
+++ b/index.html
@@ -1,73 +1,34 @@
 <!DOCTYPE html>
 <html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body {
-  font-family: Arial;
-  margin: 0;
-}
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
 
-* {
-  box-sizing: border-box;
-}
 
-img {
-  vertical-align: middle;
-}
-
-/* Position the image container (needed to position the left and right arrows) */
-.container {
+.slideshow-container {
+  max-width: 1000px;
   position: relative;
-  margin-left: 170px;
-  margin-right: 170px;
-  margin-top: 10px;
- margin-bottom: 20px;
-
-
-
+  margin: auto;
+  max-height: auto;
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
 
-}
 
-/* Add a pointer when hovering over the thumbnail images */
-.cursor {
-  cursor: pointer;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
   position: absolute;
-  top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
 }
 
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -76,152 +37,138 @@ img {
   top: 0;
 }
 
-/* Container for image text */
-.caption-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
+
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.active {
+  background-color: #717171;
 }
 
-/* Six columns side by side */
-.column {
-  float: left;
-  width: 11.1%;
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
-/* Add a transparency effect for thumnbail images */
-.demo {
-  opacity: 0.6;
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 
-.active,
-.demo:hover {
-  opacity: 1;
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+}
+@media only screen and (max-width: 1080px) {
+  .text {font-size: 11px}
+  .image {
+  max-width: 100%;
+  max-height: 100%;
+}
 }
 </style>
+</head>
 <body>
 
+<div class="slideshow-container container-fluid">
 
+<div class="mySlides fade">
+  <div class="numbertext">1 / 9</div>
+  <img class="image" id="img" src="img/Hygieia-05.jpg" >
 
-<div class="container">
-  <div class="mySlides">
-    <div class="numbertext">1 / 9</div>
-    <img src="Ai Based Surveillance Bot for Households-02.jpg" style="width:100%">
-  </div>
+</div>
 
-  <div class="mySlides">
-    <div class="numbertext">2 / 9</div>
-    <img src="Growth Box.jpg" style="width:100%">
-  </div>
+<div class="mySlides fade">
+  <div class="numbertext">2 / 9</div>
+  <img class="image" src="img/Smart Insulin Pump-09.jpg" >
 
-  <div class="mySlides">
-    <div class="numbertext">3 / 9</div>
-    <img src="Hygieia-05.jpg" style="width:100%">
-  </div>
+</div>
 
-  <div class="mySlides">
-    <div class="numbertext">4 / 9</div>
-    <img src="iHale-08.jpg" style="width:100%">
-  </div>
+<div class="mySlides fade">
+  <div class="numbertext">3 / 9</div>
+  <img class="image" src="img/Growth Box.jpg" >
 
-  <div class="mySlides">
-    <div class="numbertext">5 / 9</div>
-    <img src="Machine Vision Inspection-Qc of Automotive Parts-03.jpg" style="width:100%">
-  </div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">4 / 9</div>
+  <img src="img class="image"/Machine Vision Inspection-Qc of Automotive Parts-03.jpg" >
 
-  <div class="mySlides">
-    <div class="numbertext">6 / 9</div>
-    <img src="Semi-Automated Rov for Hull-01-01.jpg" style="width:100%">
-  </div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">5 / 9</div>
+  <img src="img/Ai Based Surveillance Bot for Households-02.jpg" >
 
-    <div class="mySlides">
-      <div class="numbertext">7 / 9</div>
-      <img src="Smart Insulin Pump-09.jpg" style="width:100%">
-    </div>
-    <div class="mySlides">
-      <div class="numbertext">8 / 9</div>
-      <img src="Smart Kit for Non-Invasive-04.jpg" style="width:100%">
-    </div>
-    <div class="mySlides">
-      <div class="numbertext">9 / 9</div>
-      <img src="Tactical Survilance.jpg" style="width:100%">
-    </div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">6 / 9</div>
+  <img class="image" src="img/iHale-08.jpg" >
 
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">7 / 9</div>
+  <img class="image" src="img/Tactical Survilance.jpg" >
 
-  <a class="prev" onclick="plusSlides(-1)">❮</a>
-  <a class="next" onclick="plusSlides(1)">❯</a>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">8 / 9</div>
+  <img class="image" src="img/Semi-Automated Rov for Hull-01-01.jpg" >
 
-  <div class="caption-container">
-    <p id="caption"></p>
-  </div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">9 / 9</div>
+  <img class="image" src="img/Smart Kit for Non-Invasive-04.jpg" >
 
-  <div class="row">
-    <div class="column">
-      <img class="demo cursor" src="Ai Based Surveillance Bot for Households-02.jpg" style="width:100%" onclick="currentSlide(1)" alt="Ai Based Surveillance Bot for Households">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="Growth Box.jpg" style="width:100%" onclick="currentSlide(2)" alt="Growth Box">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="Hygieia-05.jpg" style="width:100%" onclick="currentSlide(3)" alt="Hygieia">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="iHale-08.jpg" style="width:100%" onclick="currentSlide(4)" alt="iHale">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="Machine Vision Inspection-Qc of Automotive Parts-03.jpg" style="width:100%" onclick="currentSlide(5)" alt="Machine Vision Inspection-Qc of Automotive Parts">
-    </div>
+</div>
 
-    <div class="column">
-      <img class="demo cursor" src="Semi-Automated Rov for Hull-01-01.jpg" style="width:100%" onclick="currentSlide(6)" alt="Semi-Automated Rov for Hull">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="Smart Insulin Pump-09.jpg" style="width:100%" onclick="currentSlide(7)" alt="Smart Insulin Pump">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="Smart Kit for Non-Invasive-04.jpg" style="width:100%" onclick="currentSlide(8)" alt="Smart Kit for Non-Invasive">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="Tactical Survilance.jpg" style="width:100%" onclick="currentSlide(9)" alt="Tactical Survilance">
-    </div>
-  </div>
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
 </div>
 
 <script>
-var slideIndex = 1;
-showSlides(slideIndex);
+var slideIndex = 0;
+showSlides();
 
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
+function showSlides() {
   var i;
   var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("demo");
-  var captionText = document.getElementById("caption");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
+  var dots = document.getElementsByClassName("dot");
   for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
+    slides[i].style.display = "none";
   }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}
   for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
+    dots[i].className = dots[i].className.replace(" active", "");
   }
   slides[slideIndex-1].style.display = "block";
   dots[slideIndex-1].className += " active";
-  captionText.innerHTML = dots[slideIndex-1].alt;
+  setTimeout(showSlides, 5000); // Change image every 2 seconds
 }
 </script>
 
